fix(Navigation): fix white space in the navigation bar on tablet screen

--- a/bema-clinicals/src/components/nav/Navigation.module.css
+++ b/bema-clinicals/src/components/nav/Navigation.module.css
@@ -170,10 +170,12 @@
   }
 
   .navigation-primary--sub {
-    width: 50%;
+    width: 54%;
+    padding: 0;
   }
   .navigation-secondary {
     width: 100%;
+    gap: 2rem;
   }
 }
 
